# chess_uci

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Engine.cpp  Engine.h  Line.h  Parse_messages.cpp  Parse_messages.h  Read_engine_messages.cpp  Read_engine_messages.h  Read_messages.cpp  Read_messages.h  readme.md
.github/workflows/: build_and_test.yml
chess_uci/: Engine.cpp  Engine.h  Evaluation.cpp  Evaluation.h  Line.h  Parse_messages.cpp  Parse_messages.h  Read_messages.cpp
chess_uci/test/: Engine_communication_test.cpp  Engine_test.cpp  Evaluation_test.cpp  Parse_messages_test.cpp  Read_messages_test.cpp  catch.hpp
examples/: Analyze_carlsen_caruana_example.cpp  carlsen_caruana_rapid_game_3.pgn  carlsen_caruana_rapid_game_3_lan.pgn
test/: Dummy_engine.cpp  Engine_communication_test.cpp  Engine_test.cpp  Evaluation_test.cpp  Parse_messages_test.cpp  Read_engine_messages_test.cpp  Read_messages_test.cpp
